    t/005_PgCommon.t. (Closes: #539651)
  * debian/postgresql-common.postgresql.init: Fix "status" command when some
    clusters are down. (Closes: #635594)
  * pg_upgradecluster: Only call pg_ctl with the -t option with old clusters
    >= 8.4, as earlier versions do not yet support it. (Closes: #633801)
  * debian/postgresql-common.postinst: Remove some obsolete transition
    logic.

  [ Peter Eisentraut ]
  * pg_createcluster:
    - Use "peer" instead of "ident" from 9.1 on.
    - Update comment alignment to match existing file better.
    - (Closes: #632702)

 -- Martin Pitt <mpitt@debian.org>  Thu, 04 Aug 2011 17:51:56 +0200

postgresql-common (118) unstable; urgency=low

  * Update Catalan debconf translations, thanks Innocent De Marchi.  
    (Closes: #628370)
  * t/050_encodings.t: Update \' escaping test case for 9.1, as this
    finally has been deprecated.
  * debian/control: Add p-server-dev-all dependency to p-common, so that
    packages that build-dep on it get the pg_config wrapper.

 -- Martin Pitt <mpitt@debian.org>  Tue, 14 Jun 2011 14:52:08 +0200

postgresql-common (117) unstable; urgency=low

  * Update Dutch debconf translations, thanks Vincent Zweije.
    (Closes: #627520)
  * Add Catalan debconf translations, thanks Innocent De Marchi.
    (Closes: #628370)
  * debian/control, debian/rules: Let -server-dev-all depend on all supported
    -server-dev-X.Y packages. (Closes: #624749)
  * Add pg_config wrapper: If postgresql-server-dev-* is installed, this calls
    pg_config from the latest available one. Otherwise this falls back to
    libpq-dev's version. This should fix a common confusion for people who
    want to build e. g. 9.0 server-side extensions with a newer (like 9.1
    beta) libpq-dev installed. In debian/postgresql-common.{preinst,postrm}:
    Divert libpq-dev's /usr/bin/pg_config to pg_config.libpq-dev.

 -- Martin Pitt <mpitt@debian.org>  Sun, 29 May 2011 19:22:27 +0200

postgresql-common (116) unstable; urgency=low
