@@ -134,10 +134,10 @@ addition, if no explicit default database is specified in
 <code>user_clusters</code>, the default database will correspond to the user
 name, thus reintroducing the default upstream behaviour.</p>
 
-<h3>/etc/init.d/postgresql-<i>version</i></h3>
+<h3>/etc/init.d/postgresql</h3>
 
-<p>This script now handles the postmaster server processes for each
-cluster. However, most of the actual work is done by the new
+<p>This script now handles the postmaster server processes for each version and
+all their clusters. However, most of the actual work is done by the new
 <code>pg_ctlcluster</code> program.</p>
 
 <h3>pg_upgradecluster</h3>
