@@ -17,9 +17,6 @@
 #  GNU General Public License for more details.
 
 [ `id -u` = 0 ] || SUDO=sudo
-for v in 7.4 8.0 8.1 8.2 8.3 8.4 9.0 9.1; do
-    i=/etc/init.d/postgresql-$v
-    [ -x $i ] && $SUDO $i stop
-done
+$SUDO /etc/init.d/postgresql stop
 $SUDO killall pg_autovacuum postmaster postgres
 $SUDO rm -rf /etc/postgresql /var/lib/postgresql/ /var/log/postgresql/* /tmp/postgresql-testsuite/ /var/run/postgresql/*
