@@ -607,7 +607,7 @@ not started.
 
 Set the initial value in the C<start.conf> configuration file. See B<STARTUP
 CONTROL> below. By default, B<auto> is used, which means that the cluster is
-handled by C</etc/init.d/postgresql->I<version>, i. e. starts and stops
+handled by C</etc/init.d/postgresql>, i. e. starts and stops
 automatically on system boot.
 
 =back
